{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 23,
  "lineage": "c221b913-52ab-dbae-daaf-0fc82ae543b1",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b12595cebe33bb1",
            "arn": "arn:aws:ec2:us-west-2:516141621576:elastic-ip/eipalloc-07b12595cebe33bb1",
            "domain": "vpc",
            "id": "eipalloc-07b12595cebe33bb1",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-184-34-119-63.us-west-2.compute.amazonaws.com",
            "public_ip": "184.34.119.63",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc-nat-eip"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:516141621576:internet-gateway/igw-00c32fa75fe0eba9d",
            "id": "igw-00c32fa75fe0eba9d",
            "owner_id": "516141621576",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc-igw"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-igw"
            },
            "vpc_id": "vpc-008514995673a9768"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b12595cebe33bb1",
            "association_id": "eipassoc-0e40583bc526e871e",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0620c029c40d8cda0",
            "network_interface_id": "eni-083fb2e77af1ba79f",
            "private_ip": "10.0.1.50",
            "public_ip": "184.34.119.63",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c79b2dcaa017f18a",
            "tags": {
              "Name": "lesson-5-vpc-nat-gw"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-gw"
            },
            "vpc_id": "vpc-008514995673a9768"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:516141621576:route-table/rtb-0b6df0713fb550fd9",
            "id": "rtb-0b6df0713fb550fd9",
            "owner_id": "516141621576",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0620c029c40d8cda0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-private-rt"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-008514995673a9768"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "516141621576",
            "id": "rtb-0b6df0713fb550fd9",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:516141621576:route-table/rtb-0109a833084f9f81f",
            "id": "rtb-0109a833084f9f81f",
            "owner_id": "516141621576",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c32fa75fe0eba9d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-public-rt"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-008514995673a9768"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "516141621576",
            "id": "rtb-0109a833084f9f81f",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b752ce6ca17a75e",
            "region": "us-west-2",
            "route_table_id": "rtb-0b6df0713fb550fd9",
            "subnet_id": "subnet-0960e464aa2b262fd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "516141621576",
            "id": "rtbassoc-00b752ce6ca17a75e",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc5f8fca32b1e7f9",
            "region": "us-west-2",
            "route_table_id": "rtb-0b6df0713fb550fd9",
            "subnet_id": "subnet-09d76fb015c729e9b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "516141621576",
            "id": "rtbassoc-0cc5f8fca32b1e7f9",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0110a9429617a35c8",
            "region": "us-west-2",
            "route_table_id": "rtb-0b6df0713fb550fd9",
            "subnet_id": "subnet-0c979df5b7ceb4435"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "516141621576",
            "id": "rtbassoc-0110a9429617a35c8",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c781c684652dd71",
            "region": "us-west-2",
            "route_table_id": "rtb-0109a833084f9f81f",
            "subnet_id": "subnet-0c79b2dcaa017f18a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "516141621576",
            "id": "rtbassoc-08c781c684652dd71",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06184c79eedb7c5eb",
            "region": "us-west-2",
            "route_table_id": "rtb-0109a833084f9f81f",
            "subnet_id": "subnet-00a3964e2718ea709"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "516141621576",
            "id": "rtbassoc-06184c79eedb7c5eb",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cea60e5f99e3fff6",
            "region": "us-west-2",
            "route_table_id": "rtb-0109a833084f9f81f",
            "subnet_id": "subnet-0bdbe6ed22d7dc4df"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "516141621576",
            "id": "rtbassoc-0cea60e5f99e3fff6",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:516141621576:subnet/subnet-0960e464aa2b262fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0960e464aa2b262fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "516141621576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc-private-0"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-0"
            },
            "vpc_id": "vpc-008514995673a9768"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "516141621576",
            "id": "subnet-0960e464aa2b262fd",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:516141621576:subnet/subnet-09d76fb015c729e9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d76fb015c729e9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "516141621576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc-private-1"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-1"
            },
            "vpc_id": "vpc-008514995673a9768"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "516141621576",
            "id": "subnet-09d76fb015c729e9b",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:516141621576:subnet/subnet-0c979df5b7ceb4435",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c979df5b7ceb4435",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "516141621576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc-private-2"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-2"
            },
            "vpc_id": "vpc-008514995673a9768"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "516141621576",
            "id": "subnet-0c979df5b7ceb4435",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:516141621576:subnet/subnet-0c79b2dcaa017f18a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c79b2dcaa017f18a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "516141621576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc-public-0"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-0"
            },
            "vpc_id": "vpc-008514995673a9768"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "516141621576",
            "id": "subnet-0c79b2dcaa017f18a",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:516141621576:subnet/subnet-00a3964e2718ea709",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a3964e2718ea709",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "516141621576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc-public-1"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-1"
            },
            "vpc_id": "vpc-008514995673a9768"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "516141621576",
            "id": "subnet-00a3964e2718ea709",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:516141621576:subnet/subnet-0bdbe6ed22d7dc4df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdbe6ed22d7dc4df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "516141621576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc-public-2"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-2"
            },
            "vpc_id": "vpc-008514995673a9768"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "516141621576",
            "id": "subnet-0bdbe6ed22d7dc4df",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:516141621576:vpc/vpc-008514995673a9768",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06f6a37784cec5a30",
            "default_route_table_id": "rtb-04c2effe3465301c2",
            "default_security_group_id": "sg-0cf831377ec81891d",
            "dhcp_options_id": "dopt-06aa6554353e353e8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-008514995673a9768",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04c2effe3465301c2",
            "owner_id": "516141621576",
            "region": "us-west-2",
            "tags": {
              "Name": "lesson-5-vpc"
            },
            "tags_all": {
              "Name": "lesson-5-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "516141621576",
            "id": "vpc-008514995673a9768",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}